--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
             </h3>
             <ul>
               <li><i class="ri-check-double-line"></i>
-                <h2>Web development </h2>: React, JavaScript, NodeJs : Ruby on Rails, Python
+                <h2>Web Development </h2>: React, JavaScript, NodeJs : Ruby on Rails, Python
               </li>
               <li><i class="ri-check-double-line"></i>
                 <h2>2D Animations</h2> : Motion Graphics : Anime : Whiteboard : Explainer Videos
 
               </li>
               <li><i class="ri-check-double-line"></i>
-                <h2>Curriculum digitization</h2> : School digitization : Online learning
+                <h2>Curriculum Digitization</h2> : School digitization : Online learning
               </li>
               <li><i class="ri-check-double-line"></i>
                 <h2>Cloud Services</h2> : Corporate Training digitization : Cloud storage
@@ -427,11 +427,10 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Pricing</h2>
-          <h3>Compare packages<span>Prices</span></h3>
-          <p>Please find the animation package section outlined below, please get in touch for websites and other
-            services
-            .</p>
+          <h2>Packages</h2>
+          <h3>Compare <span>Packages</span></h3>
+          <p>If you need information about the animation package section described below or have any inquiries about
+            websites and other services, please don't hesitate to contact us .</p>
         </div>
 
         <div class="row">
@@ -439,7 +438,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="box">
               <h3>Basic</h3>
-              <h4><sup>$</sup>0<span> Basic Package</span></h4>
+
               <ul>
                 <li>75 words of Script</li>
                 <li>Full color</li>
@@ -454,7 +453,7 @@
 
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Select</a>
               </div>
             </div>
           </div>
@@ -463,7 +462,7 @@
             <div class="box recommended">
               <span class="recommended-badge">Recommended</span>
               <h3>Standard</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+
               <ul>
                 <li>150 words of Script</li>
                 <li>Full color</li>
@@ -477,7 +476,7 @@
                 <li>Delivery Time 6 days</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Select</a>
               </div>
             </div>
           </div>
@@ -485,7 +484,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <h3>Premium</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+
               <ul>
                 <li>150 words of Script</li>
                 <li>Full color</li>
@@ -499,7 +498,7 @@
                 <li>Delivery Time 7 days</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Select</a>
               </div>
             </div>
           </div>
