--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Innosight Ventures</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Inosight Ventures</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           Designed by <a href="#">Alfred Kinyua</a>
