Add email section

--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -189,7 +189,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Get the latest updates and information on our Products, Services or any Discounted Offers </p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
