--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon_io/favicon-16x16.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -37,7 +37,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-
+      <!-- <a href="index.html" class="logo"><img src="assets/img/goodLg-removebg-preview.png" alt="" class="img-fluid"></a> -->
       <h1 class="logo"><a href="./index.html">Inosight Ventures</a></h1>
       <nav id="navbar" class="navbar">
         <ul>
@@ -45,26 +45,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <!-- <li><a href="blog.html">Blog</a></li> -->
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
-            <li><a href="#">Drop Down 1</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-              <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
-                <li><a href="#">Deep Drop Down 4</a></li>
-                <li><a href="#">Deep Drop Down 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Drop Down 2</a></li>
-            <li><a href="#">Drop Down 3</a></li>
-            <li><a href="#">Drop Down 4</a></li>
-          </ul>
-          </li> -->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -77,9 +58,8 @@
     <div class="hero-container">
       <h3>Welcome to <strong>Inosight Ventures</strong></h3>
       <h1>We're Digital Agency</h1>
-      <h2>We are a full-service digital agency that specializes in website development, content digitization, and
-        animation. Additionally, we offer content marketing services to help businesses reach their target audience
-        and achieve their marketing goals.</h2> <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <h2>We create animations, build websites, digitize content and help businesses reach their goals with content
+        marketing..</h2> <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
@@ -107,7 +87,7 @@
                 <h2>Web Development </h2>: React, JavaScript, NodeJs : Ruby on Rails, Python
               </li>
               <li><i class="ri-check-double-line"></i>
-                <h2>2D Animations</h2> : Motion Graphics : Anime : Whiteboard : Explainer Videos
+                <h2>Animations</h2> : Motion Graphics : Anime : Whiteboard : Explainer Videos
 
               </li>
               <li><i class="ri-check-double-line"></i>
@@ -145,10 +125,8 @@
         <div class="section-title">
           <h2>Services</h2>
           <h3>We do offer awesome <span>Services</span></h3>
-          <p>We are dedicated to helping businesses reach new levels of success through
-            the power of digital technologies. We believe that the introduction of websites, animations, and
-            digitizations can be a game changer for businesses, providing new opportunities to engage customers,
-            streamline operations, and drive growth.</p>
+          <p>We empower businesses with digital technologies to drive growth, engage customers, and streamline
+            operations.</p>
         </div>
 
         <div class="row">
@@ -209,7 +187,7 @@
           <div class="col-lg-3 col-md-4 col-6">
             <div class="icon-box">
               <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-              <h3><a href="">Animation</a></h3>
+              <h3><a href="">Data Analysis</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4 mt-md-0">
@@ -221,13 +199,13 @@
           <div class="col-lg-3 col-md-4 col-6 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-              <h3><a href="">Corporate Training</a></h3>
+              <h3><a href="">Script Writing</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
             <div class="icon-box">
               <i class="ri-database-2-line" style="color: #47aeff;"></i>
-              <h3><a href="">Backend management</a></h3>
+              <h3><a href="">Video Editing</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
@@ -245,25 +223,25 @@
           <div class="col-lg-3 col-md-4 col-6 mt-4">
             <div class="icon-box">
               <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-              <h3><a href="">Content Marketing</a></h3>
+              <h3><a href="">Digital Marketing</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
             <div class="icon-box">
               <i class="ri-anchor-line" style="color: #b2904f;"></i>
-              <h3><a href="">WordPress</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 mt-4">
-            <div class="icon-box">
-              <i class="ri-disc-line" style="color: #b20969;"></i>
               <h3><a href="">Social Media Strategy</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
             <div class="icon-box">
+              <i class="ri-disc-line" style="color: #b20969;"></i>
+              <h3><a href="">Mobile App Development</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
               <i class="ri-base-station-line" style="color: #ff5828;"></i>
-              <h3><a href="">Digital Marketing</a></h3>
+              <h3><a href="">Logo Design</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
@@ -298,9 +276,8 @@
         <div class="section-title">
           <h2>Portfolio</h2>
           <h3>Check our <span>Portfolio</span></h3>
-          <p>Thank you for visiting our portfolio, where we proudly showcase a selection of our past projects in
-            animation and web design. Our portfolio represents our dedication to creating visually stunning and engaging
-            designs that leave a lasting impact.</p>
+          <p>Welcome to our portfolio! See how we create visually stunning designs with lasting impact in animation and
+            web design.</p>
         </div>
 
         <div class="row">
@@ -322,7 +299,7 @@
               <h4>GPT Open AI</h4>
               <p>Web App</p>
               <a href="assets/img/portfolio/portfolio-details-1.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+                class="portfolio-lightbox preview-link" title="Open Ai"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -791,7 +768,7 @@
         <div class="section-title">
           <h2>Contact</h2>
           <h3>Contact <span>Us</span></h3>
-          <p>Like what you see? give us a call today, or email us at info@inosight.com</p>
+          <p>Like what you see? give us a call today, or email us at inosightventures.com</p>
         </div>
 
         <div>
@@ -813,7 +790,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@inosight.com</p>
+                <p>info@inosightventures.com</p>
               </div>
 
               <div class="phone">
@@ -874,7 +851,7 @@
               Ongata Rongai, 13-00115<br>
               Kenya <br><br>
               <strong>Phone:</strong> +254 721 779 606<br>
-              <strong>Email:</strong> info@inosight.com<br>
+              <strong>Email:</strong> inosightventures.com<br>
             </p>
           </div>
 
