--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -154,13 +154,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>INosight Ventures</h3>
+            <h3>Inosight Ventures</h3>
             <p>
               Mayor road <br>
-              Ongata Rongai, NY 13-00115<br>
+              Ongata Rongai, 13-00115<br>
               kenya <br><br>
               <strong>Phone:</strong> +254 721 779 606<br>
-              <strong>Email:</strong> info@inosight.com<br>
+              <strong>Email:</strong> info@inosightventures.com<br>
             </p>
           </div>
 
