--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -122,9 +122,10 @@
               <h3>Project information</h3>
               <ul class="white-text">
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: Freelance</li>
+                <li><strong>Client</strong>: Gerinch</li>
                 <li><strong>Project date</strong>: 01 April, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://main--silly-dodol-693145.netlify.app/"> Chat GPT </a>
+                <li><strong>Project URL</strong>: <a href="https://main--silly-dodol-693145.netlify.app/"> Hotel Web App
+                  </a>
                 </li>
               </ul>
             </div>
@@ -157,11 +158,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Inosight Ventures</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Mayor road <br>
+              Ongata Rongai, 13-00115<br>
+              kenya <br><br>
+              <strong>Phone:</strong> +254 721 779 606<br>
+              <strong>Email:</strong> info@inosightventures.com<br>
             </p>
           </div>
 
@@ -179,10 +180,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Animation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Digitization</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Digital Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
           </div>
