--- a/portfolio-project-2.html
+++ b/portfolio-project-2.html
@@ -122,7 +122,7 @@
               <h3>Project information</h3>
               <ul class="white-text">
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: Freelance</li>
+                <li><strong>Client</strong>: Rawaki</li>
                 <li><strong>Project date</strong>: 01 March, 2023</li>
                 <li><strong>Project URL</strong>: <a href="https://rawaki.netlify.app/"> E-Commerce</a>
                 </li>
@@ -161,7 +161,7 @@
               Ongata Rongai, 13-00115<br>
               Kenya <br><br>
               <strong>Phone:</strong> +254 721 779 606<br>
-              <strong>Email:</strong> info@inosight.com<br>
+              <strong>Email:</strong> info@inosightventures.com<br>
             </p>
           </div>
 
