Add more projects

--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Web</li>
-              <li data-filter=".filter-card">Animation</li>
-              <li data-filter=".filter-web">Webo</li>
+              <li data-filter=".filter-card">2D Animation</li>
+              <li data-filter=".filter-web">Custom Animation</li>
             </ul>
           </div>
         </div>
@@ -329,68 +329,74 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Animations/Business.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 2</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Custom Business Animation</h4>
+              <p>Click the link icon to play</p>
+              <a href="assets/img/Animations/Business.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Our Business Model"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioVentures.html" class="details-link" title="More Details"><i
+                  class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Animations/BadDebt.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Insurance </h4>
+              <p>Click on the link Icon to play the video</p>
+              <a href="assets/img/Animations/Bills.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Bad financial planning?"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioInsurance2d.html" class="details-link" title="Click here"><i
+                  class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Animations/jumpGirl.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Mental and Physical Health</h4>
+              <p>Click on the link Icon to play the video</p>
+              <a href="assets/img/Animations/superGIrl.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Health and Fitness"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioCustom2d.html" class="details-link" title="Click here!"><i
+                  class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Animations/clean.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 1</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Cleaning Services Animation</h4>
+              <p>Click link Icon to play the animation</p>
+              <a href="assets/img/Animations/cleanGood.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Cleaning Services"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioClean2D.html" class="details-link" title="Click here"><i
+                  class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Animations/Teeth.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 3</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Dentist Health Care Providers</h4>
+              <p>Click the link icon to play the animation</p>
+              <a href="assets/img/Animations/painTeeth.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Sad tooth with decay!"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioDentist.html" class="details-link" title="Click here"><i
+                  class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Kids Project</h4>
+              <p>Click on the link Icon to play the video</p>
+              <a href="assets/img/Animations/Boy.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Kids Project"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioKidsCuston2d.html" class="details-link" title="Click here"><i
+                  class="bx bx-link"></i></a>
             </div>
           </div>
 
