Add new category

--- a/index.html
+++ b/index.html
@@ -284,9 +284,10 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Web</li>
+              <li data-filter=".filter-app">Websites</li>
               <li data-filter=".filter-card">2D Animation</li>
               <li data-filter=".filter-web">Custom Animation</li>
+              <li data-filter=".filter-white">Whiteboards</li>
             </ul>
           </div>
         </div>
