Add new portfolio sections

--- a/index.html
+++ b/index.html
@@ -298,10 +298,10 @@
             <img src="assets/img/portfolio/portfolio-details-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>GPT Open AI</h4>
-              <p>Web App</p>
+              <p>Click on the Icon link to view live demo</p>
               <a href="assets/img/portfolio/portfolio-details-1.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Open Ai"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="Click here"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -309,11 +309,10 @@
             <img src="assets/img/portfolio/portfolio-4.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Gerinch Hotel</h4>
-              <p>Web App</p>
+              <p>Click on the Icon link to view live demo</p>
               <a href="assets/img/portfolio/portfolio-4.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Hotel App"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-project-1.html" class="details-link" title="More Details"><i
-                  class="bx bx-link"></i></a>
+              <a href="portfolio-project-1.html" class="details-link" title="Click here"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -321,11 +320,10 @@
             <img src="assets/img/portfolio/portfolio-7.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>E-Commerce</h4>
-              <p>Web App</p>
+              <p>Click on the Icon link to view live demo</p>
               <a href="assets/img/portfolio/portfolio-7.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="E-commerce"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-project-2.html" class="details-link" title="More Details"><i
-                  class="bx bx-link"></i></a>
+              <a href="portfolio-project-2.html" class="details-link" title="Click here"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -390,6 +388,39 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Kids Project</h4>
+              <p>Click on the link Icon to play the video</p>
+              <a href="assets/img/Animations/Boy.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Kids Project"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioKidsCuston2d.html" class="details-link" title="Click here"><i
+                  class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-white">
+            <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Kids Project</h4>
+              <p>Click on the link Icon to play the video</p>
+              <a href="assets/img/Animations/Boy.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Kids Project"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioKidsCuston2d.html" class="details-link" title="Click here"><i
+                  class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-white">
+            <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Kids Project</h4>
+              <p>Click on the link Icon to play the video</p>
+              <a href="assets/img/Animations/Boy.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Kids Project"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioKidsCuston2d.html" class="details-link" title="Click here"><i
+                  class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-white">
             <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Kids Project</h4>
