Remove useless links

--- a/index.html
+++ b/index.html
@@ -388,6 +388,16 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/Animations/scam.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Social Project</h4>
+              <p>Click on the link Icon to play the video</p>
+              <a href="assets/img/Animations/scamOne.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Social Project"><i class="bx bx-plus"></i></a>
+              <a href="videoPortfolioScam2D.html" class="details-link" title="Click here"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Kids Project</h4>
@@ -398,36 +408,36 @@
                   class="bx bx-link"></i></a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-white">
-            <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/Animations/linKIds.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Kids Project</h4>
               <p>Click on the link Icon to play the video</p>
-              <a href="assets/img/Animations/Boy.png" data-gallery="portfolioGallery"
+              <a href="assets/img/Animations/linkids.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Kids Project"><i class="bx bx-plus"></i></a>
-              <a href="videoPortfolioKidsCuston2d.html" class="details-link" title="Click here"><i
+              <a href="videoPortfolioLInda2dCustom.html" class="details-link" title="Click here"><i
                   class="bx bx-link"></i></a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-white">
-            <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
+            <img src="assets/img/Animations/home.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Kids Project</h4>
+              <h4>Insurance Project</h4>
               <p>Click on the link Icon to play the video</p>
-              <a href="assets/img/Animations/Boy.png" data-gallery="portfolioGallery"
+              <a href="assets/img/Animations/HomeInsurance.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Kids Project"><i class="bx bx-plus"></i></a>
-              <a href="videoPortfolioKidsCuston2d.html" class="details-link" title="Click here"><i
+              <a href="videoPortfolioWhiteBoard.html" class="details-link" title="Click here"><i
                   class="bx bx-link"></i></a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-white">
-            <img src="assets/img/Animations/kids.png" class="img-fluid" alt="">
+            <img src="assets/img/Animations/panther.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Kids Project</h4>
+              <h4>Kids Short Story</h4>
               <p>Click on the link Icon to play the video</p>
-              <a href="assets/img/Animations/Boy.png" data-gallery="portfolioGallery"
+              <a href="assets/img/Animations/relaxPanther.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Kids Project"><i class="bx bx-plus"></i></a>
-              <a href="videoPortfolioKidsCuston2d.html" class="details-link" title="Click here"><i
+              <a href="videoPortfolioWhiteboardPantherSTory.html" class="details-link" title="Click here"><i
                   class="bx bx-link"></i></a>
             </div>
           </div>
