--- a/videoPortfolioWhiteboardPantherSTory.html
+++ b/videoPortfolioWhiteboardPantherSTory.html
@@ -48,8 +48,6 @@
           <li><a class="nav-link scrollto" href="./index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="./index.html#services">Services</a></li>
           <li><a class="nav-link scrollto active" href="./index.html#portfolio">Portfolio</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <li><a class="nav-link scrollto" href="./index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -100,7 +98,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul class="white-text">
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>:Whiteboards</li>
                 <li><strong>Field</strong>: Kids</li>
                 <li><strong>Project date</strong>: 22 May, 2023</li>
                 </li>
