--- a/videoPortfolioLInda2dCustom.html
+++ b/videoPortfolioLInda2dCustom.html
@@ -48,8 +48,6 @@
           <li><a class="nav-link scrollto" href="./index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="./index.html#services">Services</a></li>
           <li><a class="nav-link scrollto active" href="./index.html#portfolio">Portfolio</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <li><a class="nav-link scrollto" href="./index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -109,10 +107,10 @@
             <div class="portfolio-description">
               <h2>Project Details</h2>
               <p>
-                Characters included
-                Voice over recording
-                Script writing
-                60 seconds running time
+                Characters included :
+                Voice over recording :
+                Script writing :
+                60 seconds running time :
                 Illustrated background included
               </p>
             </div>
