--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
           &copy; Copyright <strong><span>Inosight Ventures</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="#">Alfred Kinyua</a>
+          Designed by <a href="#">Inosight Ventures</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
