--- a/videoPortfolio.html
+++ b/videoPortfolio.html
@@ -78,16 +78,16 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
+          <div class="col-lg-8 ">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-
                 <div class="swiper-slid">
                   <span><iframe src="https://player.vimeo.com/video/763646590?h=2ae84ccb1b&title=0&byline=0&portrait=0"
                       width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
                       allowfullscreen></iframe>
-                    <p> </p>
+
                   </span>
+
                 </div>
 
               </div>
@@ -100,7 +100,7 @@
               <h3>Project information</h3>
               <ul class="white-text">
                 <li><strong>Category</strong>: 2D Animation</li>
-                <li><strong>Client</strong>: Freelance</li>
+                <li><strong>Field</strong>: Construction</li>
                 <li><strong>Project date</strong>: 06 Jan, 2023</li>
 
               </ul>
