--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
               <li data-filter=".filter-card">2D Animation</li>
               <li data-filter=".filter-web">Custom Animation</li>
               <li data-filter=".filter-white">Whiteboards</li>
+              <li data-filter=".filter-video">videos</li>
             </ul>
           </div>
         </div>
@@ -304,6 +305,7 @@
               <a href="portfolio-details.html" class="details-link" title="Click here"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/portfolio-4.png" class="img-fluid" alt="">
@@ -441,7 +443,16 @@
                   class="bx bx-link"></i></a>
             </div>
           </div>
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-video">
+            <img src="assets/img/Animations/rose.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Serena Video</h4>
+              <p>Click on the Icon link to view live demo</p>
+              <a href="assets/img/Animations/rose.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="The Serena Hotel"><i class="bx bx-plus"></i></a>
+              <a href="serena.html" class="details-link" title="Click here"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
         </div>
 
       </div>
