--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Inosight Ventures</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description"
+    content="Inosight ventures Digital Agency provides comprehensive digital marketing services to help businesses improve their online presence and attract more customers. Our services include web design, SEO, PPC advertising, social media marketing, and more. Contact us today to learn how we can help your business grow.">
+  <meta content="animation, web design, animations, whiteboard, video" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon_io/favicon-16x16.png" rel="icon">
@@ -978,7 +979,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!--  Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
