--- a/videoPortfolioClean2D.html
+++ b/videoPortfolioClean2D.html
@@ -6,8 +6,12 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Portfolio Details </title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description"
+    content="Inosight ventures Digital Agency provides comprehensive digital marketing services to help businesses improve their online presence and attract more customers. Our services include web design, SEO, PPC advertising, social media marketing, and more. Contact us today to learn how we can help your business grow.">
+
+  <meta name="keywords"
+    content="digital agency, digital marketing, web design, SEO, PPC advertising, social media marketing">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon_io/favicon-16x16.png" rel="icon">
@@ -26,7 +30,7 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!--  Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
 
@@ -206,7 +210,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!--  Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
