--- a/index.html
+++ b/index.html
@@ -828,6 +828,7 @@
         <div class="section-title">
           <h2>Contact</h2>
           <h3>Contact <span>Us</span></h3>
+          <h3>0721779606 <span>info@inosightventures.com</span></h3>
           <p>Like what you see? give us a call today, or email us at inosightventures.com</p>
         </div>
 
@@ -883,7 +884,7 @@
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Thank you for contacting us. We will get back to you soon!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
