--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
           <h2>About</h2>
           <h3>Learn More <span>About Us</span></h3>
           <h2>We are team of talented professionals making websites, Animations and Digitization</h2>
-
-
         </div>
 
         <div class="row content">
@@ -83,6 +81,7 @@
             <h3>
               Our core services
             </h3>
+
             <ul>
               <li><i class="ri-check-double-line"></i>
                 <h2>Web Development </h2>: React, JavaScript, NodeJs : Ruby on Rails, Python
@@ -100,18 +99,17 @@
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p class="expanded text-justify">
-              We are a digital agency that offers a range of services to help businesses succeed in the digital world.
-              Our website development services help businesses establish a strong online presence and reach a wider
-              audience. We also specialize in content digitization, which involves converting traditional paper-based
-              curriculum materials into digital formats to create more engaging and accessible learning experiences.
-            <div></div>
-            Our animation services provide businesses with the ability to create visually appealing and dynamic
-            content,
-            while our content marketing services help businesses promote their products and services through valuable
-            and relevant content. Overall, our services are designed to help businesses leverage digital technologies
-            to achieve their marketing and educational goals.
-            </p>
+            <div>
+
+              <p class="expanded text-justify">
+                We are a digital agency that offers a range of services to help businesses succeed in the digital world.
+                Our website development services help businesses establish a strong online presence and reach a wider
+                audience. <span><img class="dance" src="./assets/img/Animations/happy.gif"></span> We also specialize in
+                content digitization, which involves converting traditional paper-based
+                curriculum materials into digital formats to create more engaging and accessible learning experiences.
+
+              </p>
+            </div>
             <span class="btn-learn-more learn">Learn More</span>
           </div>
         </div>
@@ -120,6 +118,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Services Section ======= -->
+
     <section id="services" class="services">
       <div class="container">
 
@@ -129,7 +128,6 @@
           <p>We empower businesses with digital technologies to drive growth, engage customers, and streamline
             operations.</p>
         </div>
-
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
@@ -279,6 +277,8 @@
           <h3>Check our <span>Portfolio</span></h3>
           <p>Welcome to our portfolio! See how we create visually stunning designs with lasting impact in animation and
             web design.</p>
+
+          <div><img class="nice" src="./assets/img/Animations/nice.gif"></div>
         </div>
 
         <div class="row">
