update new portfolio

--- a/graphics.html
+++ b/graphics.html
@@ -33,7 +33,13 @@
   <!--  Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-WP7ZYE6ZN5');
+  </script>
 </head>
 
 <body>
@@ -86,13 +92,11 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slid">
-                  <span>
-                    <video width="640" height="360" controls>
-                      <source src="./assets/video/serena.mp4" type="video/mp4">
-                      Your browser does not support the video tag.
-                    </video>
 
-                  </span>
+                  <div>
+                    <iframe src="./assets/img/graphics/portfolio.pdf#page=1" width="200%" height="500px"></iframe>
+                  </div>
+
 
                 </div>
 
@@ -105,19 +109,18 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul class="white-text">
-                <li><strong>Category</strong>: 2D Animation</li>
-                <li><strong>Field</strong>: Hotel</li>
-                <li><strong>Project date</strong>: 02 Jan, 2023</li>
+                <li><strong>Category</strong>: Graphic Design</li>
+                <li><strong>Field</strong>: Dynamic</li>
+                <li><strong>Project date</strong>: Random</li>
 
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Project Tools</h2>
               <p>
-                45 seconds running time :
-                Characters included :
-                Voice over recording :
-                Script writing :
+                Adobe Photoshop :
+                Adobe XD:
+                ADobe InDesign:
 
               </p>
             </div>
@@ -189,7 +192,7 @@
           &copy; Copyright <strong><span>Inosight Ventures</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="#">Alfred Kinyua</a>
+          Designed by <a href="#">inosight ventures</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
