--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'G-WP7ZYE6ZN5');
+  </script>
 </head>
 
 <body class="bk text-white">
@@ -98,17 +104,16 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
+          <div class="col-lg-6 pt-4 pt-lg-0 myparagraph">
             <div>
-
-              <p class="expanded text-justify">
+              <p>
                 We are a digital agency that offers a range of services to help businesses succeed in the digital world.
                 Our website development services help businesses establish a strong online presence and reach a wider
-                audience. <span><img class="dance" src="./assets/img/Animations/happy.gif"></span> We also specialize in
-                content digitization, which involves converting traditional paper-based
+                audience. <br /><br />
+                We also specialize in content digitization, which involves converting traditional paper-based
                 curriculum materials into digital formats to create more engaging and accessible learning experiences.
-
               </p>
+              <span><img class="dance" src="./assets/img/Animations/happy.gif"></span>
             </div>
             <span class="btn-learn-more learn">Learn More</span>
           </div>
@@ -289,7 +294,7 @@
               <li data-filter=".filter-card">2D Animation</li>
               <li data-filter=".filter-web">Custom Animation</li>
               <li data-filter=".filter-white">Whiteboards</li>
-              <li data-filter=".filter-video">videos</li>
+              <li data-filter=".filter-video">Graphics Design</li>
             </ul>
           </div>
         </div>
@@ -447,11 +452,11 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-video">
             <img src="assets/img/Animations/rose.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Serena Video</h4>
-              <p>Click on the Icon link to view live demo</p>
+              <h4>Our Graphics portfolio</h4>
+              <p>Click on the Icon link to view our portfolio</p>
               <a href="assets/img/Animations/rose.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="The Serena Hotel"><i class="bx bx-plus"></i></a>
-              <a href="serena.html" class="details-link" title="Click here"><i class="bx bx-link"></i></a>
+                class="portfolio-lightbox preview-link" title="Graphics Portfolio"><i class="bx bx-plus"></i></a>
+              <a href="graphics.html" class="details-link" title="Click here"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
