--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <div class="hero-container">
       <h3>Welcome to <strong>Inosight Ventures</strong></h3>
       <h1>We're Digital Agency</h1>
-      <h2>We create animations, build websites, digitize content and help businesses reach their goals with content
+      <h2>We create animations, video captioning, build websites, digitize content and help businesses reach their goals
+        with content
         marketing..</h2> <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -89,6 +90,9 @@
             </h3>
 
             <ul>
+              <li><i class="ri-check-double-line"></i>
+                <h2>Video Captioning </h2>
+              </li>
               <li><i class="ri-check-double-line"></i>
                 <h2>Web Development </h2>: React, JavaScript, NodeJs : Ruby on Rails, Python
               </li>
