--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <ul>
               <li><i class="ri-check-double-line"></i>
-                <h2>Video Captioning </h2>
+                <h2>Video Captioning</h2>: Online video platforms : Broadcasting : Education and training
               </li>
               <li><i class="ri-check-double-line"></i>
                 <h2>Web Development </h2>: React, JavaScript, NodeJs : Ruby on Rails, Python
